# qpax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml  docs.yaml
qpax/: __init__.py  diff_qp.py  elastic_qp.py  pdip.py  pdip_relaxed.py
qpax/explicit/: elastic_qp.py  pdip.py
qpax/implicit/: pdip.py  pdip_relaxed.py
test/: test_constraint_sizes.py  test_elastic_qp.py  test_qp_derivatives.py  test_qp_solver_double.py  test_qp_solver_single.py  test_speed.py  test_speed_double.py
