[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qpax"
version = "0.0.10"
description = "Differentiable QP solver in JAX."
authors = [{ name = "Kevin Tracy", email = "kevintracy48@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["optimization", "automatic differentiation", "jax"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["jax>=0.4.0", "jaxlib>=0.4.0"]

[dependency-groups]
dev = ["pre-commit", "pytest", "ruff"]

[project.urls]
"Homepage" = "https://github.com/qpax-solver/qpax"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP",  # pyupgrade
    "E501", # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"node.py" = ["E402"]
